tests/rosetta/out/Pascal/break-oo-privacy.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/break-oo-privacy.pas
break-oo-privacy.pas(20,8) Error: Incompatible types: got "ShortInt" expected "Foobar"
break-oo-privacy.pas(21,8) Error: Incompatible types: got "ShortInt" expected "Foobar"
break-oo-privacy.pas(45) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
