tests/rosetta/out/Pascal/break-oo-privacy.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:29Z
program BreakOoPrivacy;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;
type Foobar = record
  Exported: integer;
  unexported: integer;
end;

function examineAndModify(f: Foobar): Foobar;
begin
  writeln(' v: {' + IntToStr(f.Exported) + ' ' + IntToStr(f.unexported) + '} = {' + IntToStr(f.Exported) + ' ' + IntToStr(f.unexported) + '}');
  writeln('    Idx Name       Type CanSet');
  writeln('     0: Exported   int  true');
  writeln('     1: unexported int  false');
  f := 16;
  f := 44;
  writeln('  modified unexported field via unsafe');
  result := f;
  exit;
end;

function anotherExample(): integer;
begin
  writeln('bufio.ReadByte returned error: unsafely injected error value into bufio inner workings');
end;

var
  _tmp0: Foobar;
  obj: Foobar;

begin
  _tmp0.Exported := 12;
  _tmp0.unexported := 42;
  obj := _tmp0;
  writeln('obj: {' + IntToStr(obj.Exported) + ' ' + IntToStr(obj.unexported) + '}');
  obj := examineAndModify(obj);
  writeln('obj: {' + IntToStr(obj.Exported) + ' ' + IntToStr(obj.unexported) + '}');
  anotherExample();
end.
